Fix of broken CSS Link on About Page

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -10,13 +10,17 @@ div.home {
   text-align: center;
 }
 
+div.creator {
+  text-align: center
+}
+
 h1 {
   color: pink;
 }
 
 img.bev {
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
 }
 
 body {
